minor misc updates

--- a/main/relay_gpio/html/relay.html
+++ b/main/relay_gpio/html/relay.html
@@ -9,8 +9,8 @@
   <script src="relay.js"></script>
 </head>
 <body>
-	<div id="page-wrapper" title="xxx">
-	<h3>Relays</h3>
+	<div id="page-wrapper">
+	<h3>Relays<img src="eye-white.png" id="eye"/></h3>
 		<table>
 			<tbody>
 			<tr><td class='tleft'>Relay 1</td><td class='tleft'>
