Work on upload. Not working yet

--- a/main/config/html/config.html
+++ b/main/config/html/config.html
@@ -41,6 +41,15 @@
 	 	<p><button type="submit">Save and reboot</button></p>
 		</form>
 		<hr>
+		<!-- upload not working
+		<form method="POST" action="http://192.168.4.1" ectype="multipart/form-data">
+		<table>
+			<tbody>
+			<tr><td><input type="submit" value="Upload"/></td><td><input type="file" id="files" name="files[]" multiple /></td></tr>
+			</tbody>
+		</table>
+		</form>
+		<hr> -->
 		<ul id="messages"></ul>
 	</div>
 </body>
