Upload in config added.

--- a/main/config/html/config.html
+++ b/main/config/html/config.html
@@ -33,23 +33,11 @@
 		<hr>
 		<table>
 			<tbody>
-			<tr><td>Remove files:</td><td><input id="del_fat_files" type="checkbox"></td>
-			<td><button type="button" id="list_rem">List/Remove</button></td></tr>
-			</tbody>
-		</table>
-		<hr>
-	 	<p><button type="submit">Save and reboot</button></p>
-		</form>
-		<hr>
-		<!-- upload not working
-		<form method="POST" action="http://192.168.4.1" ectype="multipart/form-data">
-		<table>
-			<tbody>
-			<tr><td><input type="submit" value="Upload"/></td><td><input type="file" id="files" name="files[]" multiple /></td></tr>
+			<tr><td><button type="submit">Save and reboot</button></td><td><a href="upload.html">Upload files</a></td></tr>
 			</tbody>
 		</table>
 		</form>
-		<hr> -->
+		<hr>
 		<ul id="messages"></ul>
 	</div>
 </body>
