--- a/main/config/html/upload.html
+++ b/main/config/html/upload.html
@@ -28,6 +28,8 @@
 			<tr><td><input type="file" id="files" name="files[]" multiple /></td><td><input type="submit" value="Upload"/></td></tr>
 			</tbody>
 		</table>
+		<hr>
+		<a href="config.html">Back to Config</a>
 		</form>
 		<hr>
 		<ul id="messages"></ul>
