Some cleanup and learning switch impl.

--- a/main/relay_gpio/html/relay.html
+++ b/main/relay_gpio/html/relay.html
@@ -14,17 +14,25 @@
 		<table>
 			<tbody>
 			<tr><td class='tleft'>Relay 1</td><td class='tleft'>
-				<label class="switch"><input class="chk relay" type="checkbox" alt=0 id='relay_0'><span class="slider round"></span></label></td></tr>
+				<label class="switch"><input class="chk relay" type="checkbox" data-rno="0" data-rtype="0" id='relay_0'><span class="slider round"></span></label></td></tr>
 			<tr><td class='tleft'>Relay 2</td><td class='tleft'>
-				<label class="switch"><input class="chk relay" type="checkbox" alt=1 id='relay_1'><span class="slider round"></span></label></td></tr>
+				<label class="switch"><input class="chk relay" type="checkbox" data-rno="1" data-rtype="0" id='relay_1'><span class="slider round"></span></label></td></tr>
 			<tr><td class='tleft'>Relay 3</td><td class='tleft'>
-				<label class="switch"><input class="chk relay" type="checkbox" alt=2 id='relay_2'><span class="slider round"></span></label></td></tr>
+				<label class="switch"><input class="chk relay" type="checkbox" data-rno="2" data-rtype="0" id='relay_2'><span class="slider round"></span></label></td></tr>
 			<tr><td class='tleft'>Relay 4</td><td class='tleft'>
-				<label class="switch"><input class="chk relay" type="checkbox" alt=3 id='relay_3'><span class="slider round"></span></label></td></tr>
+				<label class="switch"><input class="chk relay" type="checkbox" data-rno="3" data-rtype="0" id='relay_3'><span class="slider round"></span></label></td></tr>
 			<tr><td class='tleft'>Relay 5</td><td class='tleft'>
-				<label class="switch"><input class="chk relay" type="checkbox" alt=4 id='relay_4'><span class="slider round"></span></label></td></tr>
+				<label class="switch"><input class="chk relay" type="checkbox" data-rno="4" data-rtype="1" id='relay_4'><span class="slider round"></span></label></td></tr>
 			</tbody>
 		</table>
+		<!-- 
+		<table>
+			<tbody>
+			<tr><td class='tleft'>Relay 5</td><td class='tleft'>
+			    <input type="radio" class="radioswitch" name="x" value="y" id="y" /></td>
+			    <td><input type="radio" class="radioswitch" name="x" value="z" id="z" /></td>
+			</tbody>
+		</table> -->
 		<ul id="messages"></ul>
 		</div>
 </body>
