Flash stack overflow, new r1 r2 html

--- a/main/relay_gpio/html/r2.html
+++ b/main/relay_gpio/html/r2.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- meta http-equiv="Content-Security-Policy" content="connect-src 'self'"-->
   <title>Relays</title>
-  <link rel="stylesheet" href="relay.css">
-  <script src="relay.js"></script>
+  <link rel="stylesheet" href="r2.css">
+  <script src="r2.js"></script>
 </head>
 <body>
 	<div id="page-wrapper">
@@ -25,14 +25,6 @@
 				<label class="switch"><input class="chk relay" type="checkbox" data-rno="4" data-rtype="1" id='relay_4'><span class="slider round"></span></label></td></tr>
 			</tbody>
 		</table>
-		<!-- 
-		<table>
-			<tbody>
-			<tr><td class='tleft'>Relay 5</td><td class='tleft'>
-			    <input type="radio" class="radioswitch" name="x" value="y" id="y" /></td>
-			    <td><input type="radio" class="radioswitch" name="x" value="z" id="z" /></td>
-			</tbody>
-		</table> -->
 		<ul id="messages"></ul>
 		</div>
 </body>
